@@ -2113,6 +2113,7 @@ Jiang Wei <sdjiangwei at sina dot com>
 Kevin Hu <Xiaotao dot Hu at ge dot com>
 Yasser Zabuair <yzabuair at hotmail dot com>
 Phlip <phlip2005 at gmail dot com>
+Michelle Zheng <Michelle dot Zheng at dowjones dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
